--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/alpinejs": "^3.13.11",
     "alpinejs": "^3.14.8",
     "astro": "^5.1.10",
+    "daisyui": "^5.5.14",
     "motion": "^12.0.6",
     "tailwindcss-animated": "^2.0.0",
     "tailwindcss-intersect": "^2.2.0"
@@ -22,6 +23,6 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.14",
     "@tailwindcss/vite": "^4.0.0",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^4.1.18"
   }
 }
